# yafpm

./: Cargo.toml  README.md
examples/: unhex.toml
src/: build_cxt.rs  context.rs  dirs.rs  hashes.rs  lib.rs  namespace.rs  package.rs  resource.rs  walk_dir.rs
src/context/: build_cxt.rs  mod.rs  shell_cxt.rs
tests/: basic_build_test.rs  dep_build_test.rs
tests/pkgs/: elfify.x  unhex  unhex.x
