[package]
name = "yafpm"
version = "0.0.1"
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "yafpm-build"
path = "src/bin/yafpm-build.rs"
required-features = ["serde", "lexopt"]

[[bin]]
name = "yafpm-shell"
path = "src/bin/yafpm-shell.rs"
required-features = ["serde", "lexopt"]

[features]
default = []
minreq-https = ["minreq", "minreq/https-rustls"]

[dependencies]
thiserror = "1.0"
nix = "0.19.0"
url = "2.2.2"
data-encoding = "2.0"
digest = "0.8.1"
blake2 = "0.8.1"
minreq = {version = "2.4.0", optional = true}
serde = {version = "1.0.0", features = ["derive"], optional = true}
lexopt = {version = "0.2.0", optional = true}
serde_json = {version = "1.0", optional = true}
toml = {version = "0.5", optional = true}

[[test]]
name = "basic_build_test"
path = "tests/basic_build_test.rs"
harness = false
test = false

[[test]]
name = "dep_build_test"
path = "tests/dep_build_test.rs"
harness = false
test = false

